login and signup

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:ZqOZ4sFUt8sR1s91wGz5@containers-us-west-103.railway.app:6541/railway
+DATABASE_URL=postgresql://Rohaan0:v2_3yAZk_KHUwhMS7fKYVrtPY9cjsK23@db.bit.io:5432/Rohaan0/Practice-Tables
